--- a/index.html
+++ b/index.html
@@ -271,14 +271,13 @@
 			<img src="images/html_incomp.gif" >
 			<br>
 			<img src="images/greenguy.gif">
-		</center>
-
-	
-		
+		</center>		
 	</div>
 
 	<div class="smelly">
 		<div>
+
+			<div class = gen style ="padding: 5%; align-items: center; width: auto; margin: 5%; background-image: url(images/bg/Crowd.jpg); ">
 			<p>Hello, and welcome to my webpage here on the internet.
 
 				I am Irish,
@@ -288,6 +287,8 @@
 			</p>
 			<center>
 			<img src="images/queer.gif">
+
+		</div>
 		</center>
 			
 			<marquee behavior="scroll" direction="left">
@@ -440,15 +441,22 @@
 					</Center>
 
 					<p> Here is a link to my <a href="https://github.com/Carrick-pre"> Github...</a></p>
+					<br>
+					<br>
 			</div>
+			<br>
+			<br>
 		</div>
 		<center>
 			<br>
+			<br>
 
 			<div class="css">I LOVE CSS</div>
+			<br>
+			<br>
 		</center>
 		<br>
-
+		<br>
 		
 
 		<div class="car">
@@ -593,6 +601,7 @@
 				<li> I go on this the whole time to play solitaire and mess around. I reccomend the art links in the cat browser <a href="https://www.windows93.xyz/"> THISSS</a></li>
 
 				</li>
+				<li>I like this website quite a lot, art all digital and just funky stuff <a href="http://art.teleportacia.org/>">Olia Lialina</a> </li>
 				<br>
 
 
@@ -648,9 +657,9 @@
 		</div>
 
 		<center>
-
+			<div class = gen style="margin: 5%; padding: 5%;">
 			<p>
-			<div>
+			<div class = gen>
 				I am an avid player of chess as well, click these to add me if you play online chess. <BR> <BR>
 				<IMG SRC="images/chessyah.gif" ALIGN="ABSMIDDLE" WIDTH=160 HEIGHT=120 BORDER=0> <BR>
 				<A HREF="https://lichess.org/@/ubiklikeschesse"> lichess </A> <BR>
@@ -667,7 +676,7 @@
 					<!--<A HREF="pagess.html"> some of my favourite photos I have taken</A> -->
 		</center>
 	</div>
-
+</div>
 	</div>
 
 	<br>
@@ -688,103 +697,123 @@ background=1995.png&tablecolor=black&textcolor=white" frameborder="0"></iframe>
 				<a target="_blank" href="https://momg.neocities.org/"><img alt="Visit the Gif Gallery!"
 						src="https://momg.neocities.org/site-images/momg-badge.gif"></a>
 						<a href="http://www.hat.net/abs/noclick/"> <img src="images/buttons/noclick.gif" > </a>
-				<img src="images/buttons/2b63533b.gif">
-				<img src="images/buttons/navisearch">
-				<img src="images/buttons/800x600.gif">
-				<img src="images/buttons/abasawd3.jpg">
-				<img src="images/buttons/angyangy.gif">
-				<img src="images/buttons/antinft.gif">
-				<img src="images/buttons/aolsuck.gif">
-				<img src="images/buttons/archlinux.gif">
-				<img src="images/buttons/artbutt.gif">
-				<img src="images/buttons/bemvindo.gif">
-				<img src="images/buttons/bestifviewedwithanopenmind.gif">
-				<img src="images/buttons/bestvieweddesktop.gif">
-				<img src="images/buttons/bookmark.gif">
-				<img src="images/buttons/bookmark_this_page.gif">
-				<img src="images/buttons/btb.png">
-				<img src="images/buttons/burnit.gif">
-				<img src="images/buttons/button2.gif">
-				<img src="images/buttons/camtime.png">
-				<img src="images/buttons/catscape.gif">
-				<img src="images/buttons/catstuff.gif">
-				<img src="images/buttons/chromnow.gif">
-				<img src="images/buttons/DeadNow.jpg">
-				<img src="images/buttons/discord-no-way.gif">
-				<img src="images/buttons/dnfbtn.gif">
-				<img src="images/buttons/dp_NOW.gif">
-				<img src="images/buttons/elect.gif">
-				<img src="images/buttons/email.gif">
-				<img src="images/buttons/filecity.gif">
-				<img src="images/buttons/fishnow2.gif">
-				<img src="images/buttons/gayrat.png">
-				<img src="images/buttons/gaywebring.gif">
-				<img src="images/buttons/geo-citi.gif">
-				<img src="images/buttons/gluten_free_web.gif">
-				<img src="images/buttons/gothpride.gif">
-				<img src="images/buttons/got_html.gif">
-				<img src="images/buttons/h-free-anim.gif">
-				<img src="images/buttons/hmtna23.gif">
-				<img src="images/buttons/html32.gif">
-				<img src="images/buttons/jamiroquai.gif">
-				<img src="images/buttons/java_dot_net_member.gif">
-				<img src="images/buttons/k5aqaNt.gif">
-				<img src="images/buttons/kawaiiads.gif">
-				<img src="images/buttons/kitten88.gif">
-				<img src="images/buttons/knbutton.gif">
-				<img src="images/buttons/korg.gif">
-				<img src="images/buttons/korgsmblk.gif">
-				<img src="images/buttons/KYS_NOW.png">
-				<img src="images/buttons/learn_html.gif">
-				<img src="images/buttons/lo-025.gif">
-				<img src="images/buttons/LTW.bmp">
-				<img src="images/buttons/midimusic.gif">
-				<img src="images/buttons/movespace005.gif">
-				<img src="images/buttons/mwcts.png">
-				<img src="images/buttons/netnow.gif">
-				<img src="images/buttons/newbud.gif">
-				
-				<img src="images/buttons/noframes.gif">
-				<img src="images/buttons/nosmoke.gif">
-				<img src="images/buttons/noteoth2.gif">
-				<img src="images/buttons/notepad.gif">
-				<img src="images/buttons/notepadpp3.gif">
-				<img src="images/buttons/noweb3.gif">
-				<img src="images/buttons/no_loud.gif">
-				<img src="images/buttons/ns-helper.gif">
-				<img src="images/buttons/oldweb.png">
-				<img src="images/buttons/openeyes.gif">
-				<img src="images/buttons/paganfish.JPG">
-				<img src="images/buttons/penguin.gif">
-				<img src="images/buttons/pensioner.gif">
-				<img src="images/buttons/pepsi.gif">
-				<img src="images/buttons/powernavi-badge.jpg">
-				<img src="images/buttons/queer.png">
-				<img src="images/buttons/restroom.gif">
-				<img src="images/buttons/seti.jpg.gif">
-				<img src="images/buttons/seti128x.gif">
-				<img src="images/buttons/steam.gif">
-				<img src="images/buttons/sun.gif">
-				<img src="images/buttons/transnow2.gif">
-				<img src="images/buttons/transrats.gif">
-				<img src="images/buttons/transrights.png">
-				<img src="images/buttons/tumblr_6c8b180de2d6126ced7d9eed840b1cfa_48fce19e_250.jpg">
-				<img src="images/buttons/tumblr_8329e11ab34172ada7ec1083fb1fa01f_f78ef65c_250.webp">
-				<img src="images/buttons/tumblr_c032ce6d651131ef1515ee3a91437955_c530ceb5_250.png">
-				<img src="images/buttons/tumblr_d87d72ee174d62f75b3414315fc9c774_55c18c31_100.gif">
-				<img src="images/buttons/tyg.gif">
-				<img src="images/buttons/unregshare.gif">
-				<img src="images/buttons/usrobot.gif">
-				<img src="images/buttons/vrmlogo.gif">
-				<img src="images/buttons/w95com.gif">
-				<img src="images/buttons/wbgrdbut2.gif">
-				<img src="images/buttons/winzip3.gif">
-				<img src="images/buttons/wizardb.gif">
-				<img src="images/buttons/y2k.gif">
-				<img src="images/buttons/y9hypf.gif">
-				<img src="images/buttons/yahooowns.jpg">
-
-
+						<img src="images/buttons/tumblr_d87d72ee174d62f75b3414315fc9c774_55c18c31_100.gif">
+						<img src="images/buttons/paganfish.JPG">
+						<img src="images/buttons/aolsuck.gif">
+						<img src="images/buttons/dnfbtn.gif">
+						<img src="images/buttons/elect.gif">
+						<img src="images/buttons/winzip3.gif">
+						<img src="images/buttons/button2.gif">
+						<img src="images/buttons/restroom.gif">
+						<img src="images/buttons/nosmoke.gif">
+						<img src="images/buttons/userbox9.png">
+						<img src="images/buttons/tumblr_c032ce6d651131ef1515ee3a91437955_c530ceb5_250.png">
+						<img src="images/buttons/antinft.gif">
+						<img src="images/buttons/drpepper.gif">
+						<img src="images/buttons/bestviewed.webp">
+						<img src="images/buttons/DOWN.GIF">
+						<img src="images/buttons/LTW.bmp">
+						<img src="images/buttons/chromnow.gif">
+						<img src="images/buttons/noteoth2.gif">
+						<img src="images/buttons/kawaiiads.gif">
+						<img src="images/buttons/catscape.gif">
+						<img src="images/buttons/tumblr_6c8b180de2d6126ced7d9eed840b1cfa_48fce19e_250.jpg">
+						<img src="images/buttons/java_dot_net_member.gif">
+						<img src="images/buttons/banr1.gif">
+						<img src="images/buttons/catstuff.gif">
+						<img src="images/buttons/dyke.jpg">
+						<img src="images/buttons/email.gif">
+						<img src="images/buttons/catscapeicon.gif">
+						<img src="images/buttons/seti128x.gif">
+						<img src="images/buttons/ns-helper.gif">
+						<img src="images/buttons/twitter.gif">
+						<img src="images/buttons/transrights.png">
+						<img src="images/buttons/notepad.gif">
+						<img src="images/buttons/fishnow2.gif">
+						<img src="images/buttons/transrats.gif">
+						<img src="images/buttons/noclick.gif">
+						<img src="images/buttons/knbutton.gif">
+						<img src="images/buttons/newbud.gif">
+						<img src="images/buttons/geo-citi.gif">
+						<img src="images/buttons/kitten88.gif">
+						<img src="images/buttons/rainbowaward.jpg">
+						<img src="images/buttons/learn_html.gif">
+						<img src="images/buttons/artbutt.gif">
+						<img src="images/buttons/notepadpp3.gif">
+						<img src="images/buttons/oldweb.png">
+						<img src="images/buttons/openeyes.gif">
+						<img src="images/buttons/w95com.gif">
+						<img src="images/buttons/midimusic.gif">
+						<img src="images/buttons/sun.gif">
+						<img src="images/buttons/korgsmblk.gif">
+						<img src="images/buttons/llamaprez.gif">
+						<img src="images/buttons/tumblr_8329e11ab34172ada7ec1083fb1fa01f_f78ef65c_250.webp">
+						<img src="images/buttons/171.gif">
+						<img src="images/buttons/no_loud.gif">
+						<img src="images/buttons/milogo.gif">
+						<img src="images/buttons/animac.gif">
+						<img src="images/buttons/penguin.gif">
+						<img src="images/buttons/btb.png">
+						<img src="images/buttons/KYS_NOW.png">
+						<img src="images/buttons/wizardb.gif">
+						<img src="images/buttons/DeadNow.jpg">
+						<img src="images/buttons/unregshare.gif">
+						<img src="images/buttons/tyg.gif">
+						<img src="images/buttons/h-free-anim.gif">
+						<img src="images/buttons/mwcts.png">
+						<img src="images/buttons/archlinux.gif">
+						<img src="images/buttons/movespace005.gif">
+						<img src="images/buttons/korg.gif">
+						<img src="images/buttons/pensioner.gif">
+						<img src="images/buttons/pgirlsstampb_meg.gif">
+						<img src="images/buttons/k5aqaNt.gif">
+						<img src="images/buttons/gayrat.png">
+						<img src="images/buttons/bestifviewedwithanopenmind.gif">
+						<img src="images/buttons/wbgrdbut2.gif">
+						<img src="images/buttons/gaywebring.gif">
+						<img src="images/buttons/vrmlogo.gif">
+						<img src="images/buttons/lo-025.gif">
+						<img src="images/buttons/mtdew.jpg">
+						<img src="images/buttons/voice_activated.gif">
+						<img src="images/buttons/got_html.gif">
+						<img src="images/buttons/y9hypf.gif">
+						<img src="images/buttons/y2k.gif">
+						<img src="images/buttons/v3aban.gif">
+						<img src="images/buttons/bookmark_this_page.gif">
+						<img src="images/buttons/discord-no-way.gif">
+						<img src="images/buttons/jamiroquai.gif">
+						<img src="images/buttons/caretaker.gif">
+						<img src="images/buttons/yahooowns.jpg">
+						<img src="images/buttons/noframes.gif">
+						<img src="images/buttons/filecity.gif">
+						<img src="images/buttons/camtime.png">
+						<img src="images/buttons/seti.jpg.gif">
+						<img src="images/buttons/navisearch.gif">
+						<img src="images/buttons/2b63533b.gif">
+						<img src="images/buttons/html32.gif">
+						<img src="images/buttons/bemvindo.gif">
+						<img src="images/buttons/bookmark.gif">
+						<img src="images/buttons/burnit.gif">
+						<img src="images/buttons/powernavi-badge.jpg">
+						<img src="images/buttons/usrobot.gif">
+						<img src="images/buttons/bot95.gif">
+						<img src="images/buttons/steam.gif">
+						<img src="images/buttons/netnow.gif">
+						<img src="images/buttons/dp_NOW.gif">
+						<img src="images/buttons/linktoc.gif">
+						<img src="images/buttons/angyangy.gif">
+						<img src="images/buttons/bestvieweddesktop.gif">
+						<img src="images/buttons/abasawd3.jpg">
+						<img src="images/buttons/gothpride.gif">
+						<img src="images/buttons/800x600.gif">
+						<img src="images/buttons/transnow2.gif">
+						<img src="images/buttons/noweb3.gif">
+						<img src="images/buttons/hmtna23.gif">
+						<img src="images/buttons/desktop.gif">
+						<img src="images/buttons/pepsi.gif">
+						<img src="images/buttons/gluten_free_web.gif">
+						<img src="images/buttons/queer.png">
+						
 			</div>
 			<br>
 			<br>
