--- a/index.html
+++ b/index.html
@@ -279,9 +279,9 @@
 
 			<div class = gen style ="padding: 5%; align-items: center; width: auto; margin: 5%; background-image: url(images/bg/Crowd.jpg); ">
 			<p>Hello, and welcome to my webpage here on the internet.
-
+				My name is Síofra
 				I am Irish,
-				I am 27 years old. I work with the confusers. I like linux, wood working and big into music. I
+				I am 27 years old. I work with the confusers, for a massive multinational. I like linux, wood working and big into music. I
 				drive an old car and have a big subwoofer in it. Please find some stupid things on this website.
 				I am fond of cats. this website breaks as soon as you load it on a mobile. you have been warned.
 			</p>
@@ -466,7 +466,7 @@
 					<br>
 					<IMG SRC="images/car/golf.png" width="350">
 					<p>I drive a 2003 golf mk4</p> <img SRC = "images/ripem.gif">
-					<p>It's going mighty at the moment. with a cracked windscreen...</p>
+					<p>It's going mighty at the moment. <del> with a cracked windscreen... </del> I had it replaced.</p>
 					<p> I never thought I would drive a golf but I am found of the older cars.</p>
 					<p> I am not a Vee Dubber stan but I do recommend a mk4 golf if you need a car</p>
 					<hr>
@@ -635,8 +635,11 @@
 			<center> <br> <img src="images/xfiles/x.gif"
 
 				<br>
+				<div class = gen style="background-color: pink; padding: 5%"> 
 				<p> Plus I think Scully is a babe and had a massive crush on her </p>
+				<img src = "images/xfiles/gil2.jpg">
 				<p> Still do...</p>
+				</div>
 				<br> </center>
 				
 			
@@ -656,12 +659,13 @@
 			
 		</div>
 
+
 		<center>
 			<div class = gen style="margin: 5%; padding: 5%;">
 			<p>
 			<div class = gen>
 				I am an avid player of chess as well, click these to add me if you play online chess. <BR> <BR>
-				<IMG SRC="images/chessyah.gif" ALIGN="ABSMIDDLE" WIDTH=160 HEIGHT=120 BORDER=0> <BR>
+				<IMG SRC="images/chessyah.gif" ALIGN="ABSMIDDLE" WIDTH=300 > <BR>
 				<A HREF="https://lichess.org/@/ubiklikeschesse"> lichess </A> <BR>
 				<A HREF="https://www.chess.com/member/hgrunt"> Chess.com </A> <BR> <BR>
 			</div>
@@ -691,7 +695,7 @@ background=1995.png&tablecolor=black&textcolor=white" frameborder="0"></iframe>
 		<footer>
 			<div class="theContainer">
 				<center>
-					<h111> here is a lot of buttons i like </h111>
+					<h22> here is a lot of buttons i like </h22>
 					<br>
 				</center>
 				<a target="_blank" href="https://momg.neocities.org/"><img alt="Visit the Gif Gallery!"
@@ -828,10 +832,16 @@ background=1995.png&tablecolor=black&textcolor=white" frameborder="0"></iframe>
 				<a href="secret/walkLike.html"> <img src="images/newdoor.gif"></a>
 			</div>
 
+			<img src = "images/misc/worldwideweb_badge.gif">
+
+			<hr>
+
 			<p>ALL OWNED BY CARRICK COPYRIGHT 2023</p>
 			
 			<p> Except for the stuff I stole, Some stuff from <a href=" https://etc.usf.edu/maps"> This </a> Other stuff was stolen from a lot of geocities archives..
 				<p>This page was started may 1 2020 Three years!</p>
+
+				
 
 	</center>
 
