--- a/index.html
+++ b/index.html
@@ -616,7 +616,9 @@
 
 		
 		<div class = "xfiles">
-			<center> <h1> <img src="images/xfiles/x1logow.gif">files </h1></center>
+			<center> <h1><img src ="images/xfiles/scully.jpg"><img src="images/xfiles/x1logow.gif">files <img src ="images/xfiles/mulder.jpg"> </h1></center>
+			
+			
 			<p> Not going to lie to you, this section on this website is just really an excuse to have as many photos as possible of X files more than anything else. </p>
 			<center>
 			<img src="images/xfiles/ufoanim.gif" >
@@ -653,9 +655,10 @@
 			<hr>
 			<img src="images/xfiles/xpshnu.gif" width="400">
 			<hr>
-			
-			<img src="images/xfiles/xfblack.gif">
 		</center>
+		<img src="images/xfiles/xfblack.gif">
+			<img src ="images/xfiles/MPbanner.jpg">
+			<img src ="images/xfiles/sawmhb_banner.jpg">
 			
 		</div>
 
